# image-translator

./: .gitignore  pyproject.toml
src/: cuda_test.py  log.py  main.py  utils.py
src/inpainting/: __init__.py  deepfillv2.py  easy.py  efficient_sam.py
src/inpainting/lama/: __init__.py  ffc.py
src/inpainting/lama/model/: README.md
src/ocr/: __init__.py  easy_ocr.py
src/ocr/manga_ocr/: __init__.py
src/rendering/: __init__.py  easy.py
src/textdetector/: __init__.py
src/textdetector/ctd/: __init__.py  basemodel.py  db_utils.py  textblock.py  textmask.py  weight_init.py
src/textdetector/ctd/yolov5/: common.py  yolo.py
src/textdetector/efficient_sam/: __init__.py  easy_ocr.py
src/translators/: __init__.py  sakura.py
src/utils/: model.py
